# ved-db-rust-client

./: CHANGELOG.md  Cargo.toml  README.md  build.ps1  build.sh  install.ps1  run_tests.ps1
docs/: README.md  installation.md  overview.md  troubleshooting.md
src/: connection.rs  error.rs  lib.rs  types.rs
