[package]
name = "veddb-client"
version = "0.0.11"
edition = "2021"
authors = ["Mihir Rabari <mihirrabari2604@gmail.com>"]
description = "Official Rust client library and CLI for VedDB - Fast, lightweight in-memory key-value database"
repository = "https://github.com/Mihir-Rabari/ved-db-rust-client"
homepage = "https://github.com/Mihir-Rabari/ved-db-rust-client"
documentation = "https://docs.rs/veddb-client"
readme = "README.md"
license = "MIT"
keywords = ["database", "kv-store", "client", "async", "veddb"]
categories = ["database", "network-programming"]
exclude = [
    "examples/",
    "benches/",
    ".github/",
    ".gitignore",
]

[lib]
name = "veddb_client"
path = "src/lib.rs"
doc = true
test = true
bench = true

[dependencies]
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
bytes = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-channel = "1.8"
tracing-subscriber = { version = "0.3", optional = true }
clap = { version = "4.0", features = ["derive", "env"] }
colored = "2.0"
prettytable-rs = "0.10"
indicatif = { version = "0.17", features = ["tokio"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.2"
# wiremock removed as it was causing dependency issues

[dev-dependencies.criterion]
version = "0.5"
features = ["html_reports"]

[[bench]]
name = "benchmarks"
harness = false

[[bin]]
name = "veddb-cli"
path = "src/bin/veddb-cli.rs"
doc = false

[features]
default = ["tracing-subscriber"]
